<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_onboarding_one"><![CDATA[Search job easier & more effective]]></string>
    <string name="title_onboarding_two"><![CDATA[Apply for job anywhere & anytime]]></string>
    <string name="title_onboarding_three"><![CDATA[Your dream job is waiting for you!]]></string>
    <string name="subtitle_onboarding_one">Find your ideal job faster and more efficiently. Our platform filters opportunities that match your skills and interests, allowing you to focus on what truly matters.</string>
    <string name="subtitle_onboarding_two">Seamlessly apply for jobs no matter where you are or what time it is. With our platform, your next career move is just a few clicks away, anytime you’re ready.</string>
    <string name="subtitle_onboarding_three">Unlock endless career opportunities tailored just for you. Start your journey today and discover roles that align perfectly with your skills and passions.</string>
    <string name="next">Next</string>
    <string name="explore">Explore</string>
</resources>