<?xml version="1.0" encoding="utf-8"?>
<MotionScene
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="1000">
       <KeyFrameSet>
       </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/iv_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Constraint
            android:id="@+id/iv_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            motion:layout_editor_absoluteY="0dp"
            motion:layout_editor_absoluteX="0dp"
            android:rotation="90"
            android:translationX="600dp"
            android:translationY="800dp"
            android:visibility="invisible" />
        <Constraint
            android:id="@+id/iv_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotation="90"
            android:translationX="600dp"
            android:translationY="800dp"
            android:visibility="invisible" />
        <Constraint
            android:id="@+id/v_indicator_one"
            android:layout_width="80dp"
            android:layout_height="8dp"
            android:layout_marginStart="24dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" >
            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/colorPrimary" />
        </Constraint>
        <Constraint
            android:id="@+id/v_indicator_two"
            motion:layout_constraintStart_toEndOf="@id/v_indicator_one"
            android:layout_width="40dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            android:layout_marginTop="32dp" >
            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/gray" />
        </Constraint>
        <Constraint
            android:id="@+id/v_indicator_three"
            motion:layout_constraintStart_toEndOf="@id/v_indicator_two"
            android:layout_width="40dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            android:layout_marginTop="32dp" >
            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/gray" />
        </Constraint>
        <Constraint
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            motion:layout_constraintTop_toBottomOf="@id/v_indicator_one"
            android:layout_marginTop="16dp">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/title_onboarding_one"/>
        </Constraint>
        <Constraint
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            motion:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="8dp">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/subtitle_onboarding_one"/>
        </Constraint>
        <Constraint
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="@id/btn_next"
            android:layout_marginStart="40dp"
            motion:layout_constraintTop_toTopOf="@id/btn_next"
            motion:layout_constraintStart_toStartOf="@id/btn_next">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/next"/>
        </Constraint>
        <Constraint
            android:id="@+id/iv_next"
            motion:layout_constraintEnd_toEndOf="@id/btn_next"
            android:layout_width="16dp"
            android:layout_height="16dp"
            motion:layout_constraintBottom_toBottomOf="@id/btn_next"
            android:layout_marginEnd="40dp"
            motion:layout_constraintTop_toTopOf="@id/btn_next" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/iv_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotation="-90"
            android:translationX="-600dp"
            android:translationY="800dp"
            android:visibility="invisible" />
        <Constraint
            android:id="@+id/iv_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            motion:layout_editor_absoluteY="0dp"
            motion:layout_editor_absoluteX="0dp"
            android:rotation="0"
            android:translationX="0dp"
            android:translationY="0dp"
            android:visibility="visible" />
        <Constraint
            android:id="@+id/iv_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:rotation="90"
            android:translationX="600dp"
            android:translationY="800dp" />
        <Constraint
            android:id="@+id/v_indicator_one"
            android:layout_width="40dp"
            android:layout_height="8dp"
            android:layout_marginStart="24dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp">

            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/gray" />
        </Constraint>
        <Constraint
            android:id="@+id/v_indicator_two"
            motion:layout_constraintStart_toEndOf="@id/v_indicator_one"
            android:layout_width="80dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            android:layout_marginTop="32dp">

            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/colorPrimary" />
        </Constraint>
        <Constraint
            android:id="@+id/v_indicator_three"
            motion:layout_constraintStart_toEndOf="@id/v_indicator_two"
            android:layout_width="40dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            android:layout_marginTop="32dp">

            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/gray" />
        </Constraint>
        <Constraint
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            motion:layout_constraintTop_toBottomOf="@id/v_indicator_one"
            android:layout_marginTop="16dp">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/title_onboarding_two"/>
        </Constraint>
        <Constraint
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            motion:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="8dp">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/subtitle_onboarding_two"/>
        </Constraint>
        <Constraint
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="@id/btn_next"
            android:layout_marginStart="40dp"
            motion:layout_constraintTop_toTopOf="@id/btn_next"
            motion:layout_constraintStart_toStartOf="@id/btn_next">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/next"/>
        </Constraint>
        <Constraint
            android:id="@+id/iv_next"
            motion:layout_constraintEnd_toEndOf="@id/btn_next"
            android:layout_width="16dp"
            android:layout_height="16dp"
            motion:layout_constraintBottom_toBottomOf="@id/btn_next"
            android:layout_marginEnd="40dp"
            motion:layout_constraintTop_toTopOf="@id/btn_next" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/three" >
        <Constraint
            android:id="@+id/iv_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            motion:layout_editor_absoluteY="205dp"
            android:rotation="-90"
            android:translationX="-600dp"
            android:translationY="800dp"
            android:visibility="invisible" />
        <Constraint
            android:id="@+id/iv_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            motion:layout_editor_absoluteY="0dp"
            motion:layout_editor_absoluteX="0dp"
            android:rotation="-90"
            android:translationX="-600dp"
            android:translationY="800dp"
            android:visibility="invisible" />
        <Constraint
            android:id="@+id/iv_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            motion:layout_editor_absoluteY="800dp"
            motion:layout_editor_absoluteX="600dp"
            android:rotation="0"
            android:translationX="0dp"
            android:translationY="0dp"
            android:visibility="visible" />
        <Constraint
            android:id="@+id/v_indicator_one"
            android:layout_width="40dp"
            android:layout_height="8dp"
            android:layout_marginStart="24dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" >

            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/gray" />
        </Constraint>
        <Constraint
            android:id="@+id/v_indicator_two"
            motion:layout_constraintStart_toEndOf="@id/v_indicator_one"
            android:layout_width="40dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            android:layout_marginTop="32dp" >

            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/gray" />
        </Constraint>
        <Constraint
            android:id="@+id/v_indicator_three"
            motion:layout_constraintStart_toEndOf="@id/v_indicator_two"
            android:layout_width="80dp"
            android:layout_height="8dp"
            android:layout_marginStart="4dp"
            motion:layout_constraintTop_toTopOf="@id/bg_onboarding"
            android:layout_marginTop="32dp" >

            <CustomAttribute
                motion:attributeName="cardBackgroundColor"
                motion:customColorValue="@color/colorPrimary" />
        </Constraint>
        <Constraint
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            motion:layout_constraintTop_toBottomOf="@id/v_indicator_one"
            android:layout_marginTop="16dp">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/title_onboarding_three"/>
        </Constraint>
        <Constraint
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            motion:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="8dp">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/subtitle_onboarding_three"/>
        </Constraint>
        <Constraint
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            motion:layout_constraintBottom_toBottomOf="@id/btn_next"
            android:layout_marginStart="40dp"
            motion:layout_constraintTop_toTopOf="@id/btn_next"
            motion:layout_constraintStart_toStartOf="@id/btn_next">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/next"/>
        </Constraint>
        <Constraint
            android:id="@+id/iv_next"
            motion:layout_constraintEnd_toEndOf="@id/btn_next"
            android:layout_width="16dp"
            android:layout_height="16dp"
            motion:layout_constraintBottom_toBottomOf="@id/btn_next"
            android:layout_marginEnd="40dp"
            motion:layout_constraintTop_toTopOf="@id/btn_next" />
    </ConstraintSet>
    <Transition
        motion:constraintSetStart="@+id/end"
        motion:constraintSetEnd="@+id/three"
        motion:duration="1000" />
</MotionScene>